<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_menu"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FFFFFF"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>

    <ImageView
            android:layout_width="229dp"
            android:layout_height="100dp"
            android:src="@drawable/angus_logo"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalLogo"/>

    <Button
            android:id="@+id/my_work_button"
            android:text="My Work"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal">
    </Button>

    <Button
            android:id="@+id/overview_button"
            android:text="Overview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal">
    </Button>

    <Button
            android:id="@+id/create_button"
            android:text="Create"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal">
    </Button>

    <Button
            android:id="@+id/search_button"
            android:text="Search"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal">
    </Button>

    <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@mipmap/logout"
            android:background="#0000"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription">
    </ImageButton>

    <TextView
            android:id="@+id/employeeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="250dp"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            tools:text="FirstName, LastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>