<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_overview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#FFFFFF">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.625"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView"
            android:text="Overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalTitle"/>

    <ImageView
            android:layout_width="229dp"
            android:layout_height="100dp"
            android:src="@drawable/angus_logo"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalLogo"/>

    <Button
            android:id="@+id/overview_tr_button"
            android:text="Tenant Requests"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal">
    </Button>

    <Button
            android:id="@+id/overview_emergency_button"
            android:text="Emergency"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>