<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/tenantRequestFragment"
            android:title="TR"/>
    <item
            android:id="@+id/preventiveMaintenanceFragment"
            android:title="PM"/>
    <item
            android:id="@+id/inspectionsFragment"
            android:title="Inspections"/>


</menu>